# metis-client

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  common.py  pyproject.toml
.github/workflows/: build.yml  linter.yml  pr.yml  push.yml  release.yml  test.yml
examples/: example_async.py  example_async_low_level.py  example_sync.py  test.py
metis_client/: __init__.py  auth.py  client.py  compat.py  const.py  exc.py  helpers.py  metis.py  metis_async.py
metis_client/dtos/: __init__.py  auth.py  base.py  calculation.py  collection.py  datasource.py  error.py  event.py  resp.py  user.py
metis_client/models/: __init__.py  auth.py  base.py  calculation.py  calculations.py  collection.py  datasource.py  datasources.py  engine.py  error.py  event.py  hub.py  pubsub.py  resp.py  subscription.py  timestamp.py  user.py
metis_client/namespaces/: auth.py  base.py  calculations.py  collections.py  datasources.py  root.py  stream.py  v0.py  v0_auth.py  v0_calculations.py  v0_collections.py  v0_datasources.py
tests/: helpers.py  test_client.py  test_exc.py  test_helpers_convert_dict_items_to_datetime.py  test_helpers_encode_decode.py  test_helpers_rfc3339.py  test_helpers_type_guards.py  test_helpers_wrappers.py  test_metis.py  test_metis_async.py
tests/models/: test_auth_no_auth.py  test_auth_password.py  test_auth_token.py  test_event.py  test_hub.py  test_subscription.py
tests/namespaces/: test_auth.py  test_calculations.py  test_collections.py  test_datasources.py  test_v0_auth.py  test_v0_calculations.py  test_v0_collections.py  test_v0_datasources.py
