[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4", "reentry"]
build-backend = "flit_core.buildapi"

[project]
name = "metis-client"
dynamic = ["version"]  # read from metis_client/__init__.py
description = """Metis infra API client in Python"""
authors = [{name = "Sergei Korolev", email = "knopki@duck.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = ["metis", "client"]
requires-python = ">=3.8"
dependencies = [
    "aiohttp >= 3.7.4",
    "aiohttp-sse-client >= 0.2.1",
    "yarl >= 1.6.3, < 2.0",
]

[project.optional-dependencies]
cli = [
    # "anyio >= 3.0.0",
    # "click >= 7.1.1",
]
debug = [
      "wdb"
]
lint = [
     "black",
     "flake8",
]
testing = [
#     "mock==2.0.0",
#     "pgtest>=1.1.0",
#     "pytest-aiohttp",
#     "sqlalchemy-diff==0.1.3",
#     "pytest>=6.2.0",
#     "wheel>=0.31",
#     "aiida-testing-dev",
#     "coverage",
#     "flake8",
#     "pytest",
#     "pytest-cov",
#     "pytest-timeout",
    "reentry",
]
# docs = [
#     "sphinx"
# ]

[project.urls]
Source = "https://github.com/tilde-lab/metis-client"

[tool.flit.module]
name = "metis_client"
